--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         
         function redirectToPage() {
             // Replace with your actual redirect URL
-            window.location.href = 'blst.html';
+            window.location.href = 'blsst.html';
         }
     </script>
 </body>
